[package]
name = "blockchain_explorer"
version = "0.13.0-pre"
authors = ["Stegos AG <info@stegos.com>"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "explorer", "blockchainexplorer", "block"]
license = "MIT"
repository = "https://github.com/stegos/stegos"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stegos_crypto = { version = "0.2.0", path = "../crypto", default-features = false}
stegos_blockchain = { version = "0.2.0", path = "../blockchain", default-features = false}
stegos_node = { version = "0.2.0", path = "../node", default-features = false}
wasm-bindgen = "^0.2"
aes-ctr = "0.3.0"
rand = {version="0.7.2",  features = ["wasm-bindgen"] } #use getrandom feature to support wasm
yew = "0.9.0"
failure = "0.1.6"
yew-router = "0.6.1"
serde_json = "1.0.41"
serde = "1.0.102"
serde_derive = "1.0"
base64 = "0.10"
lazy_static = "1.4.0"
log = "0.4.6"
wasm-logger = "0.1.5"